# chromex

./: .gitignore  LICENSE  README.md  mix.exs
lib/: chrom_ex.ex
lib/chromex/: application.ex  client.ex  collection.ex  database.ex  embeddings.ex  embeddings_pool.ex  embeddings_worker.ex  native.ex
native/chromex_native/: Cargo.toml
native/chromex_native/src/: lib.rs
test/: chrom_ex_test.exs  chromex_test.exs  test_helper.exs
test/chromex/: collection_test.exs  database_test.exs  document_operations_test.exs  embeddings_test.exs  query_test.exs
