[package]
name = "chromex_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "chromex_native"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Pinned to commit 8963e1df (2025-12-09)
# [ENH] Expose host and port to CloudClient constructor (#5997)
[dependencies.chroma-frontend]
git = "https://github.com/chroma-core/chroma.git"
rev = "8963e1df0813da1a98d65b383c3f6719f2ebe4ba"

[dependencies.chroma-segment]
git = "https://github.com/chroma-core/chroma.git"
rev = "8963e1df0813da1a98d65b383c3f6719f2ebe4ba"

[dependencies.chroma-sqlite]
git = "https://github.com/chroma-core/chroma.git"
rev = "8963e1df0813da1a98d65b383c3f6719f2ebe4ba"

[dependencies.chroma-sysdb]
git = "https://github.com/chroma-core/chroma.git"
rev = "8963e1df0813da1a98d65b383c3f6719f2ebe4ba"

[dependencies.chroma-log]
git = "https://github.com/chroma-core/chroma.git"
rev = "8963e1df0813da1a98d65b383c3f6719f2ebe4ba"

[dependencies.chroma-config]
git = "https://github.com/chroma-core/chroma.git"
rev = "8963e1df0813da1a98d65b383c3f6719f2ebe4ba"

[dependencies.chroma-cache]
git = "https://github.com/chroma-core/chroma.git"
rev = "8963e1df0813da1a98d65b383c3f6719f2ebe4ba"

[dependencies.chroma-system]
git = "https://github.com/chroma-core/chroma.git"
rev = "8963e1df0813da1a98d65b383c3f6719f2ebe4ba"

[dependencies.chroma-types]
git = "https://github.com/chroma-core/chroma.git"
rev = "8963e1df0813da1a98d65b383c3f6719f2ebe4ba"

[dependencies.chroma-error]
git = "https://github.com/chroma-core/chroma.git"
rev = "8963e1df0813da1a98d65b383c3f6719f2ebe4ba"
